--- a/07testbold.html
+++ b/07testbold.html
@@ -4,18 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 07testbold.html </title>
-
-    <style>
-        *{font-size: 32pt;}
-    </style>
-</head>
 <body>
-    <!-- 07testbold.html -->
-    <b> sub,sup테스트 실습  </b> <br>
-    X<sup>2</sup>+Y<sup>2</sup>=(XY)<sup>2</sup> <br>
-
-    CO<sub>2</sub><p></p>
-   <!-- 07testbold.html -->    
+    02-14화요일아침 
+   
 </body>
 </html>
